[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sns-monitor-bot"
version = "0.1.0"
description = "X (Twitter) monitoring bot for aka no claw using twikit."
requires-python = ">=3.12"
dependencies = [
  "twikit>=2.3,<3",
  "python-dotenv>=1.0,<2",
  "playwright>=1.40,<2",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<1",
]

[project.scripts]
sns-monitor = "sns_monitor.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
